$Id: History,v 1.31 2001-06-22 07:57:39 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Jun 22, 2001, M.Asai (run-V03-01-00)
- Tagging for the release

Mar. 12 2001, H.Kurashige
- add binary mode for G4VUserPhysicsList::Retrieve/StorePhysicsTable
- add G4VUserPhysicsList::RetrieveCutValues and related
- add G4VUserPhysicsList::Set/ResetStoredInAscii() 
  to switch on ascii mode for Retrieve/StorePhysicsTable
- add setStoredInAscii command in G4UserPhysicsList

Feb 8 2001, M.Asai (run-V03-00-01)
- Migration to STL vector classes
  affected files :
./run/include/G4RunManager.hh
./run/src/G4RunManager.cc

Feb 7 2001, M.Asai (run-V03-00-00)
- STL migration of G4RunManager

Dec 14 2000, G.Cosmo (run-V02-00-06)
- Updated date to G4RunManager.cc for public release 3.0.

Nov 19 2000, M.Asai (run-V02-00-05)
- Another fix to G4VUserPhysicsList (H.K)

Nov 16 2000, M.Asai (run-V02-00-04)
- Fixes a bug in G4VUserPhysicsList (H.K)

Nov 16 2000, M.Asai (run-V02-00-03)
- Add G4VModularPhysicsList and G4VPhysicsConstructor 
  to modularize UserPhysicsList   (H.K)

Nov 13 2000, M.Asai (run-V02-00-02)
- Introducing a capability of storing random number status file to other directory

Nov 9 2000, M.Asai (run-V02-00-01)