@@ -1,4 +1,4 @@
-$Id: History,v 1.31 2001-06-22 07:57:39 asaim Exp $
+$Id: History,v 1.32 2001-07-13 15:57:00 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,12 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jul 13, 2001, G.Cosmo (run-V03-02-00)
+- Cleanup of pedantic warnings in Linux-g++ ANSI setup.
+- Corrected "NULL" to "0".
+- Synchronised with HEAD revision after inclusion of disclaimer
+  liability.
 
 Jun 22, 2001, M.Asai (run-V03-01-00)
 - Tagging for the release
